# argos3-srocs

./: .gitignore  README.md  TODO.md  tags2.pgm  tags4.pgm  tags6.pgm
src/: CMakeLists.txt  LICENSE  README.asciidoc
src/calibration/: builderbot_camera_system.xml  builderbot_differential_drive.xml  builderbot_rangefinders.xml
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSBuildOptions.cmake  ARGoSPackaging.cmake  FindARGoS.cmake  FindAprilTag.cmake  FindIIO.cmake  FindLua.cmake  FindMAVLink.cmake  FindMediactl.cmake  FindTurboJPEG.cmake  FindV4L2Subdev.cmake
src/plugins/: CMakeLists.txt
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/block/: CMakeLists.txt
src/plugins/robots/block/simulator/: block_entity.cpp  block_entity.h  dynamics3d_block_model.cpp  dynamics3d_block_model.h  qtopengl_block.cpp  qtopengl_block.h
src/plugins/robots/builderbot/: CMakeLists.txt
src/plugins/robots/builderbot/control_interface/: ci_builderbot_camera_sensor.cpp  ci_builderbot_camera_system_sensor.cpp  ci_builderbot_camera_system_sensor.h  ci_builderbot_clock_sensor.cpp  ci_builderbot_clock_sensor.h  ci_builderbot_dds_actuator.cpp  ci_builderbot_dds_actuator.h  ci_builderbot_debug_actuator.cpp  ci_builderbot_debug_actuator.h  ci_builderbot_differential_drive_actuator.cpp  ci_builderbot_differential_drive_actuator.h  ci_builderbot_differential_drive_sensor.cpp  ci_builderbot_differential_drive_sensor.h  ci_builderbot_electromagnet_actuator.cpp  ci_builderbot_electromagnet_system_actuator.cpp  ci_builderbot_electromagnet_system_actuator.h  ci_builderbot_electromagnet_system_sensor.cpp  ci_builderbot_ems_sensor.cpp  ci_builderbot_ems_sensor.h  ci_builderbot_lar_sensor.cpp  ci_builderbot_lar_sensor.h  ci_builderbot_las_actuator.cpp  ci_builderbot_las_actuator.h  ci_builderbot_las_sensor.cpp  ci_builderbot_las_sensor.h  ci_builderbot_lift_system_actuator.cpp  ci_builderbot_lift_system_actuator.h  ci_builderbot_lift_system_sensor.cpp  ci_builderbot_lift_system_sensor.h  ci_builderbot_nfc_actuator.cpp  ci_builderbot_nfc_actuator.h  ci_builderbot_nfc_sensor.cpp  ci_builderbot_nfc_sensor.h  ci_builderbot_pai_sensor.cpp  ci_builderbot_pai_sensor.h  ci_builderbot_rangefinders_sensor.cpp  ci_builderbot_rangefinders_sensor.h  ci_builderbot_wifi_actuator.cpp  ci_builderbot_wifi_actuator.h  ci_builderbot_wifi_sensor.cpp  (+1 more)
src/plugins/robots/builderbot/hardware/: .#builderbot_electromagnet_system_default_sensor.cpp  builderbot.cpp  builderbot.h  builderbot_camera_default_sensor.cpp  builderbot_camera_default_sensor.h  builderbot_camera_system_default_sensor.cpp  builderbot_camera_system_default_sensor.h  builderbot_clock_default_sensor.cpp  builderbot_clock_default_sensor.h  builderbot_dds_default_actuator.cpp  builderbot_dds_default_actuator.h  builderbot_differential_drive_default_actuator.cpp  builderbot_differential_drive_default_actuator.h  builderbot_differential_drive_default_sensor.cpp  builderbot_differential_drive_default_sensor.h  builderbot_differential_drive_iio_actuator.cpp  builderbot_ems_default_sensor.h  (+32 more)
src/plugins/robots/drone/: CMakeLists.txt
src/plugins/robots/generic/: CMakeLists.txt
src/plugins/robots/pi-puck/: CMakeLists.txt
src/plugins/simulator/: CMakeLists.txt  builderbot_qtopengl_widget.cpp  builderbot_qtopengl_widget.h  srocs_qtopengl_user_functions.cpp  srocs_qtopengl_user_functions.h
src/plugins/simulator/entities/: CMakeLists.txt  block_entity.cpp  block_entity.h  debug_entity.cpp  debug_entity.h
src/plugins/simulator/physics_engines/: CMakeLists.txt
src/plugins/simulator/visualizations/: CMakeLists.txt
src/scripts/: gdbinit.in  setup_env.sh.in
src/testing/: CMakeLists.txt  builderbot.argos  mycontroller.lua  myexperiment.argos  test_block.lua  test_builderbot.argos  test_builderbot.lua  test_camera.lua  test_camera_system.argos  test_camera_system.lua  test_clock.argos  test_clock.lua  test_differential_drive.argos  test_differential_drive.lua  test_electromagnet_system.argos  test_electromagnet_system.lua  test_lift_system.argos  test_proximity_light_sensors.lua  test_rangefinders.argos  test_rangefinders.lua  test_system.argos
src/testing/block/: test_block.lua
src/testing/builderbot/: CMakeLists.txt  test_builderbot.argos  test_camera_system.lua  test_electromagnet_system.lua  test_lift_system.argos  test_lift_system.lua
src/testing/builderbot/hardware/: test_camera_system.argos  test_differential_drive.lua
src/testing/builderbot/simulator/: example_block.lua  example_builderbot_advance.argos.in  example_builderbot_advance.lua.in  example_builderbot_basic.argos.in  example_builderbot_basic.lua.in  sample_rules.lua  test_block.lua  test_builderbot.argos  test_builderbot.argos.in  test_builderbot.lua  test_builderbot.lua.in  test_sample_rules.lua
src/testing/drone/: CMakeLists.txt  test_comms.argos  test_comms.lua  test_comms.sh  test_cv.argos  test_cv.lua  test_cv.sh  test_drone.argos  test_drone.lua  test_drone_simulator.argos  test_drone_simulator.lua
src/testing/drone/hardware/: CMakeLists.txt  test_cameras.argos.in  test_flight.argos.in  test_flight.lua  test_flight_sensor_only.argos.in  test_flight_sensor_only.lua  test_system.argos.in  test_system.lua  test_wifi.argos.in
src/testing/drone/outdated/: test_cv.cxx
src/testing/drone/simulator/: CMakeLists.txt  test_drone.argos.in  test_drone.lua
src/testing/pi-puck/: .gdb_history  CMakeLists.txt  calibrate_pipuck.lua  test_pipuck.argos  test_pipuck.argos.in  test_pipuck.lua
src/testing/pi-puck/hardware/: test_differential_drive.argos.in  test_differential_drive.lua  test_ground_sensors.argos.in  test_ground_sensors.lua  test_leds.argos.in  test_leds.lua  test_rangefinders.argos.in  test_rangefinders.lua  test_system.argos.in  test_system.lua
src/testing/pi-puck/simulator/: calibrate_pipuck.argos.in  test_pipuck.argos.in  test_pipuck.lua  test_pipuck_imu.argos.in  test_pipuck_imu.lua
src/testing/user_functions/: CMakeLists.txt  builderbot_qtopengl_widget.cpp  builderbot_qtopengl_widget.h  srocs_qtopengl_user_functions.cpp  srocs_qtopengl_user_functions.h
(+253 files in other folders)
